--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,11 @@
 /public/hot
 /public/storage
 /storage/*.key
+/storage/*.key.back
 /vendor
 .env
 .env.backup
+.env.local
 .phpunit.result.cache
 docker-compose.override.yml
 Homestead.json
