--- a/.env.development
+++ b/.env.development
@@ -2,7 +2,7 @@ APP_NAME=81_business_alliance
 APP_ENV=local
 APP_KEY=base64:PfAQEc9vXwjKww27lslPWHp2P8vU38oM92Tkb1TFMJE=
 APP_DEBUG=true
-APP_URL=http://business.81.test
+APP_URL=http://nocms.com
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
